--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>eu.trentorise.smartcampus</groupId>
 	<artifactId>mobilityservice.client</artifactId>
-	<version>1.0.1</version>
+	<version>1.1</version>
 	<packaging>jar</packaging>
 
 	<dependencies>
@@ -23,7 +23,13 @@
 			<artifactId>smartcampus.client.commons</artifactId>
 			<version>2.0</version>
 		</dependency>
-		<dependency>
+    <dependency>
+      <groupId>eu.trentorise.smartcampus</groupId>
+      <artifactId>communicator.client</artifactId>
+      <version>2.0</version>
+      <scope>test</scope>
+    </dependency>
+				<dependency>
 			<groupId>it.sayservice.platform.smartplanner</groupId>
 			<artifactId>smartplanner-beans</artifactId>
 			<version>1.1.1</version>
